{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 118,
  "lineage": "ca81f75a-1128-fed8-1238-89203664482f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:internet-gateway/igw-0d4aa97ba007adfbb",
            "id": "igw-0d4aa97ba007adfbb",
            "owner_id": "793515189053",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:route-table/rtb-038624b8477300cb6",
            "id": "rtb-038624b8477300cb6",
            "owner_id": "793515189053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4aa97ba007adfbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080741f79943182d",
            "route_table_id": "rtb-038624b8477300cb6",
            "subnet_id": "subnet-06a1bb86844d6677e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet-gw",
            "aws_subnet.external-public",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d11e3eb4db095cd1",
            "route_table_id": "rtb-038624b8477300cb6",
            "subnet_id": "subnet-0c914c273bef603f5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet-gw",
            "aws_subnet.mgmt",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "external-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:subnet/subnet-06a1bb86844d6677e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06a1bb86844d6677e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793515189053",
            "tags": {
              "Name": "external"
            },
            "tags_all": {
              "Name": "external"
            },
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:subnet/subnet-0c914c273bef603f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c914c273bef603f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793515189053",
            "tags": {
              "Name": "management"
            },
            "tags_all": {
              "Name": "management"
            },
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ext-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d44ea8e060aa9cc4",
            "domain": "vpc",
            "id": "eipalloc-0ecf21c7cdf67975c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-095992b56916b26b3",
            "private_dns": "ip-10-0-2-164.us-west-2.compute.internal",
            "private_ip": "10.0.2.164",
            "public_dns": "ec2-35-85-178-65.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.178.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0616738d61ba55382",
            "domain": "vpc",
            "id": "eipalloc-00a2a5c8cd54b3196",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0349275540c690656",
            "private_dns": "ip-10-0-1-151.us-west-2.compute.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-52-35-225-86.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.225.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.68",
            "association_id": "eipassoc-0207d629b64291ddc",
            "domain": "vpc",
            "id": "eipalloc-0dc6f1f826a8f8055",
            "network_border_group": "us-west-2",
            "network_interface": "eni-095992b56916b26b3",
            "private_dns": "ip-10-0-2-68.us-west-2.compute.internal",
            "private_ip": "10.0.2.68",
            "public_dns": "ec2-100-21-25-68.us-west-2.compute.amazonaws.com",
            "public_ip": "100.21.25.68",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024d009a4e1aa7f28",
            "arn": "arn:aws:ec2:us-west-2:793515189053:instance/i-03382282b940f0c35",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03382282b940f0c35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-tf-demo-key-a938",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0349275540c690656"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-095992b56916b26b3"
              }
            ],
            "primary_network_interface_id": "eni-0349275540c690656",
            "private_dns": "ip-10-0-1-151.us-west-2.compute.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-52-35-225-86.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.225.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0e645a08bc00e1baf",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c914c273bef603f5",
            "tags": {
              "Name": "tf-aws-bigip-2nic-8066"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-2nic-8066"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049c93f65d427639a"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.data.template_file.user_data_vm0",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0349275540c690656",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:06:90:6f:1e:9f",
            "private_dns_name": "ip-10-0-1-151.us-west-2.compute.internal",
            "private_ip": "10.0.1.151",
            "private_ips": [
              "10.0.1.151"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-049c93f65d427639a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c914c273bef603f5",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-8066"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-8066"
            }
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-095992b56916b26b3",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:17:27:6e:42:19",
            "private_dns_name": "ip-10-0-2-164.us-west-2.compute.internal",
            "private_ip": "10.0.2.164",
            "private_ips": [
              "10.0.2.164",
              "10.0.2.68"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0827ea2a169138f3f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a1bb86844d6677e",
            "tags": {
              "Name": "BIGIP-External-Public-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-8066"
            },
            "tags_all": {
              "Name": "BIGIP-External-Public-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-8066"
            }
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ext-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02572fcce37ec205d",
            "domain": "vpc",
            "id": "eipalloc-0b6a438ec353de2f3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04a564acea62bcaa5",
            "private_dns": "ip-10-0-2-183.us-west-2.compute.internal",
            "private_ip": "10.0.2.183",
            "public_dns": "ec2-35-86-57-196.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.57.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d62116865607be30",
            "domain": "vpc",
            "id": "eipalloc-094997bf42c630ac5",
            "network_border_group": "us-west-2",
            "network_interface": "eni-084b9c5626d7bbd92",
            "private_dns": "ip-10-0-1-201.us-west-2.compute.internal",
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-52-26-68-228.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.68.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.170",
            "association_id": "eipassoc-08edaa1a57c1c0bc1",
            "domain": "vpc",
            "id": "eipalloc-0fa046198c21fc525",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04a564acea62bcaa5",
            "private_dns": "ip-10-0-2-170.us-west-2.compute.internal",
            "private_ip": "10.0.2.170",
            "public_dns": "ec2-34-208-253-215.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.253.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "f5_bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024d009a4e1aa7f28",
            "arn": "arn:aws:ec2:us-west-2:793515189053:instance/i-0b9bb95bc25d18ccc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9bb95bc25d18ccc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tf-aws-bigip-tf-demo-key-a938",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-084b9c5626d7bbd92"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-04a564acea62bcaa5"
              }
            ],
            "primary_network_interface_id": "eni-084b9c5626d7bbd92",
            "private_dns": "ip-10-0-1-201.us-west-2.compute.internal",
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-52-26-68-228.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.68.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-015f38014c0ada4e1",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c914c273bef603f5",
            "tags": {
              "Name": "tf-aws-bigip-2nic-f292"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-2nic-f292"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-049c93f65d427639a"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.aws_eip.mgmt",
            "module.bigip.aws_network_interface.external_private",
            "module.bigip.aws_network_interface.external_private1",
            "module.bigip.aws_network_interface.mgmt",
            "module.bigip.aws_network_interface.mgmt1",
            "module.bigip.aws_network_interface.private",
            "module.bigip.aws_network_interface.private1",
            "module.bigip.aws_network_interface.public",
            "module.bigip.aws_network_interface.public1",
            "module.bigip.data.aws_ami.f5_ami",
            "module.bigip.data.aws_secretsmanager_secret_version.current",
            "module.bigip.data.template_file.user_data_vm0",
            "module.bigip.random_id.module_id",
            "module.bigip.random_string.dynamic_password",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-084b9c5626d7bbd92",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:2c:33:9a:44:f1",
            "private_dns_name": "ip-10-0-1-201.us-west-2.compute.internal",
            "private_ip": "10.0.1.201",
            "private_ips": [
              "10.0.1.201"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-049c93f65d427639a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c914c273bef603f5",
            "tags": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-f292"
            },
            "tags_all": {
              "Name": "BIGIP-Managemt-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-f292"
            }
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.bigip[1]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-04a564acea62bcaa5",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:59:54:51:ef:39",
            "private_dns_name": "ip-10-0-2-183.us-west-2.compute.internal",
            "private_ip": "10.0.2.183",
            "private_ips": [
              "10.0.2.170",
              "10.0.2.183"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-0827ea2a169138f3f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a1bb86844d6677e",
            "tags": {
              "Name": "BIGIP-External-Public-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-f292"
            },
            "tags_all": {
              "Name": "BIGIP-External-Public-Interface-0",
              "Prefix": "tf-aws-bigip-2nic-f292"
            }
          },
          "dependencies": [
            "aws_subnet.external-public",
            "aws_subnet.mgmt",
            "module.bigip.random_id.module_id",
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.external-network-security-group-public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:security-group/sg-0827ea2a169138f3f",
            "description": "Security group for BIG-IP ",
            "egress": [],
            "id": "sg-0827ea2a169138f3f",
            "ingress": [],
            "name": "tf-aws-bigip-external-public-nsg-a938-20211011184548822000000002",
            "name_prefix": "tf-aws-bigip-external-public-nsg-a938-",
            "owner_id": "793515189053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-aws-bigip-external-public-nsg-a938"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-external-public-nsg-a938"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.external-network-security-group-public",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2897449713",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0827ea2a169138f3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.external-network-security-group-public",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3643055242",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0827ea2a169138f3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2666927224",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0827ea2a169138f3f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.external-network-security-group-public.aws_security_group.this",
            "module.external-network-security-group-public.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:security-group/sg-049c93f65d427639a",
            "description": "Security group for BIG-IP Management",
            "egress": [],
            "id": "sg-049c93f65d427639a",
            "ingress": [],
            "name": "tf-aws-bigip-mgmt-nsg-a938-20211011184548821900000001",
            "name_prefix": "tf-aws-bigip-mgmt-nsg-a938-",
            "owner_id": "793515189053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-aws-bigip-mgmt-nsg-a938"
            },
            "tags_all": {
              "Name": "tf-aws-bigip-mgmt-nsg-a938"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c65b8d9601d819d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1904064441",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-049c93f65d427639a",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt-network-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3460192484",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049c93f65d427639a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 8443,
            "id": "sgrule-4260877407",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049c93f65d427639a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2231902922",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049c93f65d427639a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mgmt-network-security-group.aws_security_group.this",
            "module.mgmt-network-security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:793515189053:vpc/vpc-07c65b8d9601d819d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d76f95b7beedad12",
            "default_route_table_id": "rtb-0626a3ef5cab483c3",
            "default_security_group_id": "sg-0721f9b56ceb91124",
            "dhcp_options_id": "dopt-91b207e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07c65b8d9601d819d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0626a3ef5cab483c3",
            "owner_id": "793515189053",
            "tags": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-a938",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-aws-bigip-vpc-a938",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_id.id"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}